# simharness

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  conda-env.yaml  environment.yml  main.py  pyproject.toml  requirements.txt  virtual-packages.yml
.github/workflows/: pages.yml  static.yml
.gitlab/.issue_templates/: bug.md  default.md  enhancement.md  experiment.md  feature.md
.gitlab/issue_templates/: bug.md  default.md  enhancement.md  experiment.md  feature.md
conf/: ccai_paper_config.yaml  ccai_paper_config_test_exp.yaml  config.py  config.yaml  debug_marl.yaml  marl_config.yaml
conf/environment/: default.yaml  environment.yaml  marl.yaml
conf/environment/env_config/: reactive.yaml  reactive_marl.yaml
conf/environments/: reactive.yaml
conf/evaluation/: default.yaml  evaluation.yaml
conf/evaluation/evaluation_config/: default.yaml
conf/evaluation/evaluation_config/env_config/: reactive.yaml
conf/exploration/: default.yaml  exploration.yaml
conf/exploration/exploration_config/: epsilon_greedy.yaml
conf/framework/: default.yaml
conf/hydra/: default.yaml  group_by_day-time.yaml  group_by_experiment_name_and_day-time.yaml
conf/hydra/job_logging/: stdout_only.yaml
conf/hydra/run/: day-time.yaml  experiment_name_and_day-time.yaml
conf/resources/: default.yaml  resources.yaml
conf/rollouts/: default.yaml  rollouts.yaml
conf/sim_harness/: reactive.yaml
conf/simulation/: simfire.yaml
conf/simulation/eval/: default.yaml
conf/simulation/simfire/: eval.yaml  eval.yml  train.yaml  train.yml  view.yaml
conf/simulation/train/: default.yaml
conf/training/: simfire.yaml
conf/training/model/: screen_size_128.yaml  screen_size_256.yaml  screen_size_512.yaml  screen_size_64.yaml
conf/tunables/: default.yaml
configs/: reactive_config.yaml
configs/environment/: reactive.yaml
configs/sim/hard_large/: eval.yml  train.yml
configs/sim/simple_large/: eval.yml  train.yml
configs/sim/simple_small/: eval.yml  train.yml
docker/: Dockerfile  code-server.dockerfile  multi.dockerfile  nvidia.dockerfile  ray.dockerfile  simple-grafana-prometheus.dockerfile  simple.dockerfile
docker/grafana/: grafana.ini
docker/prometheus/: prometheus.yml
docs/source/: analytics.md  conf.py  contributing.md  developing.md  index.rst
docs/source/introduction/: index.rst  installation.md  overview.md
docs/source/tutorials/: developing.md  environment_obs.md  examples.md  how_to.md  index.rst
k8s/ray/: raycluster-2.4.0-with-grafana.yaml  raycluster-grafana.yaml
outputs/2023-03-20/14-48-21/.hydra/: config.yaml  hydra.yaml
scripts/: generate_fire_init_pos_db.py  port_forward.sh  start_grafana_and_prometheus.sh  stop_grafana_and_prometheus.sh
setup/: environment.yml  pyproject.toml
simharness2/: __init__.py  sim_registry.py
simharness2/agents/: __init__.py  agent.py
simharness2/agents/tests/: test_agents.py
simharness2/analytics/: agent_analytics.py  harness_analytics.py  simulation_analytics.py  utils.py
simharness2/callbacks/: initalize_simfire.py  render_env.py  set_env_seeds_callback.py
simharness2/environments/: __init__.py  env_registry.py  fire_harness.py  harness.py  multi_agent_fire_harness.py  reactive.py  reactive_marl.py  rl_harness.py
simharness2/environments/tests/: check_reactive_environments.py
simharness2/logger/: aim.py
simharness2/models/: __init__.py  custom_dqn_torch_model.py
simharness2/rewards/: base_reward.py
simharness2/utils/: evaluation_fires.py  fire_data.py  simfire.py  utils.py
simharness2/utils/tests/: test_simfire.py
